--- a/README.Rmd
+++ b/README.Rmd
@@ -55,16 +55,16 @@ library(rena)
 * `location`: A character string specifying the download location. By default, it uses the current working directory.
 * `email:` A character string specifying the email address for notifications. By default, no email is sent.
 
-### Download data using a query
+### Download data using accessions ids
 
-```{r}
+```
 rena::ena_download("a", accession = "SAMEA3231268,SAMEA3231287", format = "READS_FASTQ", location = "C:/Users/ns651/OneDrive")
 ```
 
-### Download data using accession numbers
+### Download data using query
 
-```{r}
-ena_download("a", accession = "SAMEA3231268,SAMEA3231287", format = "READS_FASTQ")
+```
+rena::ena_download("q", query = "result=read_run&query=country=%22Japan%22AND%20depth=168", format = "READS_FASTQ",location = "C:/Users/ns651/OneDrive")
 ```
 
 ## Issues
